Use `100%` for width over `100vw` to prevent horizontal scrollbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,12 +56,12 @@ body, html {
 
   > div:first-of-type {
     margin-bottom: auto;
-    width: 100vw;
+    width: 100%;
   }
 
   > div:last-of-type {
     margin-top: auto;
-    width: 100vw;
+    width: 100%;
   }
 }
 
